[package]
name = "find-images"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "find-images"
path = "src/main.rs"

[[bin]]
name = "randomize"
path = "src/randomize.rs"

[dependencies]
structopt = "0.3"
rand = "0.6.5"
